<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.LoginFragment"
    android:background="@color/white">

    <com.smarteist.autoimageslider.SliderView
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:sliderAnimationDuration="600"
        app:sliderAutoCycleDirection="back_and_forth"
        app:sliderIndicatorAnimationDuration="600"
        app:sliderIndicatorEnabled="false"
        app:sliderIndicatorGravity="center_horizontal|bottom"
        app:sliderIndicatorMargin="15dp"
        app:sliderIndicatorOrientation="horizontal"
        app:sliderIndicatorPadding="3dp"
        app:sliderIndicatorRadius="2dp"
        app:sliderIndicatorSelectedColor="#5A5A5A"
        app:sliderIndicatorUnselectedColor="#FFF"
        app:sliderScrollTimeInSec="1" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/slider"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/sfprodisplaybold"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="34dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/input_holder"
        android:fontFamily="@font/abeezee"
        android:hint="@string/e_mail"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hintColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTitle" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/emailInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPassword"
        android:fontFamily="@font/abeezee"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textColorHint="@color/hintColor"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/input_holder"
        />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/abeezee_italic"
        android:text="@string/forgot_password"
        android:textColor="@color/accentColor"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@id/passwordInput"
        app:layout_constraintTop_toBottomOf="@id/passwordInput"/>

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/sign_in"
        android:fontFamily="@font/abeezee_italic"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword"
        android:background="@drawable/button_design"
        />

    <TextView
        android:id="@+id/accountInquiry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/abeezee"
        android:textSize="17dp"
        android:text="@string/account_inquiry"
        android:textColor="@color/gray"
        />

    <TextView
        android:id="@+id/newAccountRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/accountInquiry"
        app:layout_constraintTop_toBottomOf="@id/accountInquiry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/abeezee_italic"
        android:textSize="17dp"
        android:text="@string/create_account"
        android:textColor="@color/buttonColor"
        />


</androidx.constraintlayout.widget.ConstraintLayout>