<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.authentication.PasswordResetFragment">

    <Button
        android:id="@+id/backButton"
        android:layout_width="30dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_arrow_back"
        android:layout_marginTop="12dp"
        android:layout_marginStart="15dp"
        />

    <TextView
        android:id="@+id/forgotPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfprodisplaybold"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:layout_marginTop="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="343dp"
        android:layout_height="66dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/descriptionForgotPassword"
        android:textColor="@color/gray"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordTitle"/>

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/input_holder"
        android:fontFamily="@font/abeezee"
        android:hint="@string/e_mail"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="@color/hintColor"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/submitReset"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/continueToReset"
        android:fontFamily="@font/abeezee_italic"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_design"
        />

</androidx.constraintlayout.widget.ConstraintLayout>