<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.profile.ProfileFragment"
    android:background="@color/white">

    <Button
        android:id="@+id/backButton"
        android:layout_width="300dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/button_design"
        android:layout_marginTop="15dp"
        android:text="@string/back_to_main"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="12sp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/containerHolder"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        android:layout_marginTop="50dp"
        app:cardElevation="0dp"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/imageHolder"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_vertical|center_horizontal"
            app:cardCornerRadius="60dp"
            app:cardElevation="10dp"
            >
            <ImageView
                android:id="@+id/iconProfile"
                android:layout_width="120dp"
                android:src="@drawable/ic_person_holder"
                android:layout_height="120dp"
                android:scaleType="fitCenter"
                />
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/fullNameHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/containerHolder"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="@font/montserrat"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fullNameHolder"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/update_button_design"
        android:fontFamily="@font/montserrat_medium"
        android:textStyle="bold"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:elevation="10dp"
        />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logoutButton"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_design"
        android:fontFamily="@font/montserrat_medium"
        android:textStyle="bold"
        android:text="@string/update_personal_data"
        android:textColor="@color/white"
        android:elevation="10dp"
        />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/updateButton"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:background="@drawable/update_button_design"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:elevation="10dp"/>

    <TextView
        android:id="@+id/userCounty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userEmail"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:background="@drawable/update_button_design"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:elevation="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>